Add domain classes and repositories

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=easyvps
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/tjv
+spring.datasource.username=tjv
+spring.datasource.password=tjv
+spring.datasource.driver-class-name=org.postgresql.Driver
