--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=easyvps
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://localhost:5432/tjv
-spring.datasource.username=tjv
-spring.datasource.password=tjv
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_tjv
+spring.datasource.username=db_tjv
+spring.datasource.password=db_tjv
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql=true
