Add schema.sql and data.sql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,10 @@ spring.datasource.username=db_tjv
 spring.datasource.password=db_tjv
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
+
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/schema.sql
+
+spring.sql.init.mode=never
+spring.sql.init.platform=postgresql
+spring.sql.init.data-locations=classpath:data.sql
